--- a/style.css
+++ b/style.css
@@ -6,32 +6,9 @@ body.black {
   background-color: black;
   color: white;
 }
-
-header {
-  border-bottom: 1px solid gray;
-  padding: 20px;
+#logo {
+  width: 100px;
 }
-nav {
-  border: 1px solid gray;
-  width: 200px;
-  height: 600px;
-  float: left;
-}
-nav ol {
-  list-style: none;
-  padding: 0;
-}
-article {
-  float: left;
-  padding: 20px;
-}
-h2 {
-  font-size: 50px;
-}
-#control {
-  float: right;
-}
-header img {
-  float: right;
-  height: 100px;
+.container {
+  padding-top: 20px;
 }
